--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,20 @@
   "require": {
     "php": "^7.1.3",
     "fideloper/proxy": "^4.0",
-    "guzzlehttp/guzzle": "~6.0",
-    "laravel/framework": "5.8.*",
-    "laravel/tinker": "^1.0",
-    "laravelcollective/html": "^5.4.0"
+    "guzzlehttp/guzzle": "~7.0.1",
+    "laravel/framework": "^8.0",
+    "laravel/tinker": "^2.0",
+    "laravel/ui": "^3.0",
+    "laravelcollective/html": "^6.0"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.3",
     "filp/whoops": "^2.0",
     "fzaninotto/faker": "^1.4",
     "mockery/mockery": "^1.0",
-    "nunomaduro/collision": "^2.0",
-    "phpunit/phpunit": "^7.0"
+    "nunomaduro/collision": "^5.0",
+    "phpunit/phpunit": "^9.0",
+    "facade/ignition": "^2.3.6"
   },
   "autoload": {
     "classmap": [
