--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,7 @@
        RewriteEngine on
        RewriteCond %{REQUEST_URI} !^public
        RewriteRule ^(.*) public/$1 [L]
+       RewriteEngine On
+       RewriteCond %{HTTPS} off
+       RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
