datatables-upload-foto-filters

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "laravel/framework": "^8.0",
     "laravel/tinker": "^2.0",
     "laravel/ui": "^3.0",
-    "laravelcollective/html": "^6.0"
+    "laravelcollective/html": "^6.0",
+    "yajra/laravel-datatables-oracle": "^9.18"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.3",
