--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "laravel/tinker": "^2.0",
     "laravel/ui": "^3.0",
     "laravelcollective/html": "^6.0",
+    "tinymce/tinymce": "^5.10",
     "yajra/laravel-datatables-oracle": "^9.18"
   },
   "require-dev": {
